copy updates, and style z-index fix for user dropdown on homepage.

--- a/jekyll-source/_sass/_header-footer.scss
+++ b/jekyll-source/_sass/_header-footer.scss
@@ -12,7 +12,7 @@
 	//box-shadow: 0px 5px 20px rgba(0,0,0,.3);
 	height:139px;
 	border: none;
-	z-index: 5;
+	z-index: 100;
 	border-radius: 0;
 }
 
